<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="@dimen/dim_tx">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="15dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:gravity="center"/>

    <TextView
        android:id="@+id/id_tv_nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nom"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/editext_nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nom"
        android:textSize="@dimen/dim_tx"
        app:layout_constraintTop_toBottomOf="@id/id_tv_nom"/>

    <TextView
        android:id="@+id/id_tv_prenom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prenom"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/editext_nom"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/editext_prenom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prenom"
        android:textSize="@dimen/dim_tx"
        app:layout_constraintTop_toBottomOf="@id/id_tv_prenom"/>

    <TextView
        android:id="@+id/id_tv_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/editext_prenom"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/editext_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:textSize="@dimen/dim_tx"
        app:layout_constraintTop_toBottomOf="@id/id_tv_age"/>

    <TextView
        android:id="@+id/id_tv_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/editext_age"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/editext_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:textSize="@dimen/dim_tx"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/id_tv_phone"/>

    <TextView
        android:id="@+id/id_tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/editext_phone"
        app:layout_constraintStart_toStartOf="parent"/>
    <!--j'ai compris le principe de sauvegarde mais j'ai besoin de cette ID pour manager mon constraite Layout-->
    <EditText
        android:id="@+id/editext_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textSize="@dimen/dim_tx"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/id_tv_password"/>

    <TextView
        android:id="@+id/nb_fois"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nbre_fois"
        android:textAllCaps="false"
        android:layout_margin="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editext_password"/>

    <Button
        android:id="@+id/soumettre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Soumettre"
        android:textAllCaps="false"
        android:layout_margin="@dimen/dim_tx"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editext_password"/>

</androidx.constraintlayout.widget.ConstraintLayout>